@@ -29,6 +29,8 @@ Revision history for DBIx::Class
           when we both select and order by the result of the same subquery
         - Fix the Sybase hubrid limit dialect (RowCountOrGenericSubQ) losing
           Group/Having/Order clauses when called without an offset (RT#73244)
+        - No longer generate incorrect SQL on ->as_query called on resultsets
+          with software_limit enabled
         - A number of corner case fixes of void context populate() with \[]
         - Fix corner case of forked children disconnecting the parents DBI
           handle
